--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
   	<title>menu test</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="menu.styles.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
- <!--   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> -->
     <script type="text/javascript" src="main.index.js"></script>
     <link rel="icon" href="PDQmedallion.gif" type="image/gif" sizes="16x16">
 
@@ -16,6 +15,8 @@
   <body>
 
    <div id="root"></div>
+
+   <Menubar />
 
     <nav id="sticky-menubar" class="navbar navbar-inverse" role="navigation">
       <div class="body-wrap">
